--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "carbon"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Carbon Launcher"
+authors = ["itztiva"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -20,6 +20,29 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-shell = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde_json = "1.0"
+log = "0.4.17"
+tasklist = "0.2.13"
+dirs = "5.0"
+sysinfo = "0.29.10"
+serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.11.3", features = ["stream", "blocking", "json"] }
+futures-util = "0.3.14"
+indicatif = "0.15.0"
+tokio = { version = "1", features = ["full"] }
+sha2 = "0.9"
+sha1 = "0.10.5"
+winapi = { version = "0.3", features = ["tlhelp32", "shellapi", "winbase"] }
+tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", branch = "main" }
+regex = "1"
+whoami = "1.1" 
+windows = { version = "0.58", features = ["Win32_UI_Shell"] }
+declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
+time = "0.3.36"
+powershell_script = "1.1.0"
+clap = { version = "4.1", features = ["derive"] }
+tauri-plugin-notification = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-websocket = "2"
+tauri-plugin-fs = "2"
 
