--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-deep-link": "^2.0.0-rc.2",
     "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "^2.0.0",
+    "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-notification": "^2.0.0",
     "@tauri-apps/plugin-process": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.0",
