--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tauri-apps/plugin-notification": "^2.0.0",
     "@tauri-apps/plugin-process": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.0",
+    "@tauri-apps/plugin-updater": "~2",
     "@tauri-apps/plugin-websocket": "^2.0.0",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
