--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,3 +47,6 @@ tauri-plugin-dialog = "2"
 tauri-plugin-websocket = "2"
 tauri-plugin-fs = "2"
 
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
+
